--- a/index.html
+++ b/index.html
@@ -1,1 +1,215 @@
-bisou non gifle
+<!DOCTYPE HTML>
+<!--
+	Astral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Lou Bettini</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+			  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+			  crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+			  integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+			  crossorigin="anonymous">
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Wrapper-->
+			<div id="wrapper">
+
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#projets" class="icon fa-folder"><span>Projets</span></a>
+						<a href="#entreprise" class="icon fa-folder"><span>entreprise</span></a>
+						<a href="#portefeuille" class="icon fa-folder"><span>Veille</span></a>
+
+
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+									<h1>Lou Bettini</h1>
+									<p>maitre loutre</p>
+								</header>
+								<a href="#projets" class="jumplink pic">
+									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+									<img src="images/me.jpg" alt="" />
+								</a>
+							</article>
+
+						<!-- Work -->
+							<article id="projets" class="panel">
+								<header>
+									<h1>projets en formation</h1>
+								</header>
+
+								<section>
+									<p><h1>PPE2 :</h1></p>
+									<h2>Floris</h2>
+									<img src="images/florisScreen.png"  height="400" width="800" />
+									<p><h3>le Groupe AGORA est un centre de commerce de gros reservé exclusivement aux fleuriste.
+									Les clients trouvent donc sous un seul toit : des fleurs coupées ,
+									un vaste choix de plante d’interieure et exterieur et un assortimeent complet allant des accessoires de base aux dernieres nouveautés
+									en matiéres de decoration.
+								</h3></p>
+
+									<p><h3>la société  Floris est leader sur le marché et souhaite proposer de nouveaux service à ça clientel afin de repondre a ses attentes de de la fidéliser.
+									La société Floris souhaite donc dévelloper un site e-commerce.
+									Il vous est demandé de creer 4 pages pour ce site web
+									une page d’acceuil ;
+									une page affichant tout les produits ;
+									une page affichant les produits en promotions ;
+									une page panier.
+									(ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
+									<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>
+									</br>
+									</br>
+									</br>
+
+
+									<p><h1>PPE4 :</h1></p>
+									<h2>TechPlan</h2>
+									<img src="images/techplanscreen.png"  height="500" width="300" />
+									<p><h3>La société Domy59 est une société de dépannage électrique qui veut faire développer un ensemble
+									de logiciels métiers visant à faciliter la planification et la gestion d’interventions
+								</h3></p>
+
+									<p><h3>Domy 59 : Application mobile permettant la géolocalisation des techniciens , la récupération des
+									plannings d’interventions et la gestion de ces interventions </h3></p>
+									<a href="PPE4.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>
+
+								</section>
+							</article>
+
+						<!-- prout -->
+						<article id="entreprise" class="panel">
+							<header>
+								<h1>
+									Projets En Entreprise
+								</h1>
+							</header>
+							<section>
+								<div>
+									<div>
+										<Span>
+											<h1>Presentation de L'entreprise IVS</h1>
+											<img src="images/FOND%20ECRAN%20IVS.jpeg"  height="400" width="800" />
+											<h2>
+												IVS, société spécialisée dans le développement de solutions intelligentes d'analyse d'image et d'extraction d'informations.<br/>
+												IVS est a l'origine de la creation du produit IVSTORE:</br>
+												IVStore est un capteur camera destiné au retail, il permet la visualisation et l'analyse du comportement client a l'interieur d'un magasin.<br/>
+												</br>
+												<a href="http://www.ivstore.fr" style="align-self: center"  class="btn btn-default btn-lg" type="button" >lien du site </a>
+											</h2>
+										</Span>
+										<br/>
+
+										<h1>PROJET 1</h1>
+										<span>
+											<h1>Back Office</h1>
+											<img src="images/backoffice.png"  height="400" width="800" />
+										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
+											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+										</span>
+
+										<h1>Projet 2</h1>
+											<h1>PXE</h1>
+										<img src="images/PXEscreen.png"  height="400" width="800" />
+											<h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des ordinateurs composant le parcs d'IVSTORE</h2>
+										<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+
+									</div>
+
+								</div>
+							</section>
+						</article>
+
+
+						<!-- Contact -->
+							<article id="ppe3" class="panel">
+								<header>
+									<a href="PPE3.html">dossier complet</a>
+								</header>
+								<h1>
+									Contexte professionel
+								</h1>
+								<section>
+									<div class="row">
+										<div class="4u 12u$(mobile)">
+											To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
+										</div>
+
+									</div>
+								</section>
+							</article>
+						<!-- toto -->
+						<article id="ppe4" class="panel">
+							<header>
+								<a href="PPE4.html">dossier complet</a>
+							</header>
+							<h1>
+								Contexte professionel
+							</h1>
+							<section>
+								<div class="row">
+									<div class="4u 12u$(mobile)">
+										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
+									</div>
+
+								</div>
+							</section>
+						</article>
+						<article id="portefeuille" class="panel">
+							<header>
+								<a href="PPE4.html">dossier complet</a>
+							</header>
+							<h1>
+								Contexte professionel
+							</h1>
+							<section>
+								<div class="row">
+									<div class="4u 12u$(mobile)">
+										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
+									</div>
+
+								</div>
+							</section>
+						</article>
+
+					</div>
+
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="copyright">
+							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+				crossorigin="anonymous"></script>
+
+	</body>
+</html>
