--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Lou Bettini</h1>
-									<p>maitre loutre</p>
+									<p>devellopeur en apprentissage</p>
 								</header>
 								<a href="#projets" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
