--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									une page panier.
 									(ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
 									<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-										Launch demo modal
+										contexte
 									</button>
 
 									<!-- Modal -->
@@ -84,10 +84,10 @@
 											<div class="modal-content">
 												<div class="modal-header">
 													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-													<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+													<h4 class="modal-title" id="myModalLabel"></h4>
 												</div>
 												<div class="modal-body">
-													
+													<img src="images/techplanscreen.png"  height="500" width="300" />
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
