--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#projets" class="icon fa-folder"><span>Projets</span></a>
 						<a href="#entreprise" class="icon fa-folder"><span>entreprise</span></a>
-						<a href="#portefeuille" class="icon fa-folder"><span>Veille</span></a>
+						<a href="#veille" class="icon fa-folder"><span>Veille</span></a>
 
 
 					</nav>
@@ -87,7 +87,7 @@
 													<h4 class="modal-title" id="myModalLabel"></h4>
 												</div>
 												<div class="modal-body">
-													<img src="images/techplanscreen.png"  height="500" width="300" />
+													<img src="images/E4-PPE2%20Bettini.pdf"  height="500" width="300" />
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -111,8 +111,28 @@
 
 									<p><h3>Domy 59 : Application mobile permettant la géolocalisation des techniciens , la récupération des
 									plannings d’interventions et la gestion de ces interventions </h3></p>
-									<a href="PPE4.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>
+									<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+										contexte
+									</button>
 
+									<!-- Modal -->
+									<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+													<h4 class="modal-title" id="myModalLabel2"></h4>
+												</div>
+												<div class="modal-body">
+													<img src="images/E4-PPE4%20Bettini(1).pdff"  height="500" width="300" />
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+													<button type="button" class="btn btn-primary">Save changes</button>
+												</div>
+											</div>
+										</div>
+									</div>
 								</section>
 							</article>
 
@@ -144,15 +164,55 @@
 											<h1>Back Office</h1>
 											<img src="images/backoffice.png"  height="400" width="800" />
 										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
-										</span>
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+											Porte-feuille de competence
+										</button>
+
+											<!-- Modal -->
+										<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+														<h4 class="modal-title" id="myModalLabel5"></h4>
+													</div>
+													<div class="modal-body">
+														<img src="images/doc(1).pdf"  height="500" width="300" />
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+														<button type="button" class="btn btn-primary">Save changes</button>
+													</div>
+												</div>
+											</div>
+										</div>										</span>
 
 										<h1>Projet 2</h1>
 											<h1>PXE</h1>
 										<img src="images/PXEscreen.png"  height="400" width="800" />
 											<h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des ordinateurs composant le parcs d'IVSTORE</h2>
-										<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+											Porte-feuille de competence
+										</button>
 
+										<!-- Modal -->
+										<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+														<h4 class="modal-title" id="myModalLabel3"></h4>
+													</div>
+													<div class="modal-body">
+														<img src="images/doc(1).pdf"  height="500" width="300" />
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+														<button type="button" class="btn btn-primary">Save changes</button>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 
 								</div>
@@ -161,57 +221,54 @@
 
 
 						<!-- Contact -->
-							<article id="ppe3" class="panel">
-								<header>
-									<a href="PPE3.html">dossier complet</a>
-								</header>
+						<!-- prout -->
+						<article id="veille" class="panel">
+							<header>
 								<h1>
-									Contexte professionel
+									Projets En Entreprise
 								</h1>
-								<section>
-									<div class="row">
-										<div class="4u 12u$(mobile)">
-											To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
+							</header>
+							<section>
+								<div>
+									<div>
+										<h1>veill 1</h1>
+										<span>
+											<h1>noSQL</h1>
+											<img src="images/backoffice.png"  height="400" width="800" />
+										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
+											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+										</span>
+
+										<h1>veiller 2</h1>
+										<h1>La methode Agile</h1>
+
+										<h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des ordinateurs composant le parcs d'IVSTORE</h2>
+										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+											Porte-feuille de competence
+										</button>
+
+										<!-- Modal -->
+										<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+														<h4 class="modal-title" id="myModalLabel4"></h4>
+													</div>
+													<div class="modal-body">
+														<img src="images/doc(1).pdf"  height="500" width="300" />
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+														<button type="button" class="btn btn-primary">Save changes</button>
+													</div>
+												</div>
+											</div>
 										</div>
-
-									</div>
-								</section>
-							</article>
-						<!-- toto -->
-						<article id="ppe4" class="panel">
-							<header>
-								<a href="PPE4.html">dossier complet</a>
-							</header>
-							<h1>
-								Contexte professionel
-							</h1>
-							<section>
-								<div class="row">
-									<div class="4u 12u$(mobile)">
-										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
 									</div>
 
 								</div>
 							</section>
-						</article>
-						<article id="portefeuille" class="panel">
-							<header>
-								<a href="PPE4.html">dossier complet</a>
-							</header>
-							<h1>
-								Contexte professionel
-							</h1>
-							<section>
-								<div class="row">
-									<div class="4u 12u$(mobile)">
-										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
-									</div>
-
-								</div>
-							</section>
-						</article>
-
-					</div>
 
 				<!-- Footer -->
 					<div id="footer">
