--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 													<h4 class="modal-title" id="myModalLabel"></h4>
 												</div>
 												<div class="modal-body">
-													<img src="images/E4-PPE2%20Bettini.pdf"  height="500" width="300" />
+
+													<iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -164,28 +165,8 @@
 											<h1>Back Office</h1>
 											<img src="images/backoffice.png"  height="400" width="800" />
 										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-											Porte-feuille de competence
-										</button>
-
-											<!-- Modal -->
-										<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-											<div class="modal-dialog" role="document">
-												<div class="modal-content">
-													<div class="modal-header">
-														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-														<h4 class="modal-title" id="myModalLabel5"></h4>
-													</div>
-													<div class="modal-body">
-														<img src="images/doc(1).pdf"  height="500" width="300" />
-													</div>
-													<div class="modal-footer">
-														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-														<button type="button" class="btn btn-primary">Save changes</button>
-													</div>
-												</div>
-											</div>
-										</div>										</span>
+											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+										</span>
 
 										<h1>Projet 2</h1>
 											<h1>PXE</h1>
@@ -221,54 +202,57 @@
 
 
 						<!-- Contact -->
-						<!-- prout -->
-						<article id="veille" class="panel">
-							<header>
+							<article id="ppe3" class="panel">
+								<header>
+									<a href="PPE3.html">dossier complet</a>
+								</header>
 								<h1>
-									Projets En Entreprise
+									Contexte professionel
 								</h1>
-							</header>
-							<section>
-								<div>
-									<div>
-										<h1>veill 1</h1>
-										<span>
-											<h1>noSQL</h1>
-											<img src="images/backoffice.png"  height="400" width="800" />
-										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
-										</span>
-
-										<h1>veiller 2</h1>
-										<h1>La methode Agile</h1>
-
-										<h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des ordinateurs composant le parcs d'IVSTORE</h2>
-										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-											Porte-feuille de competence
-										</button>
-
-										<!-- Modal -->
-										<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-											<div class="modal-dialog" role="document">
-												<div class="modal-content">
-													<div class="modal-header">
-														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-														<h4 class="modal-title" id="myModalLabel4"></h4>
-													</div>
-													<div class="modal-body">
-														<img src="images/doc(1).pdf"  height="500" width="300" />
-													</div>
-													<div class="modal-footer">
-														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-														<button type="button" class="btn btn-primary">Save changes</button>
-													</div>
-												</div>
-											</div>
+								<section>
+									<div class="row">
+										<div class="4u 12u$(mobile)">
+											To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
 										</div>
+
+									</div>
+								</section>
+							</article>
+						<!-- toto -->
+						<article id="ppe4" class="panel">
+							<header>
+								<a href="PPE4.html">dossier complet</a>
+							</header>
+							<h1>
+								Contexte professionel
+							</h1>
+							<section>
+								<div class="row">
+									<div class="4u 12u$(mobile)">
+										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
 									</div>
 
 								</div>
 							</section>
+						</article>
+						<article id="portefeuille" class="panel">
+							<header>
+								<a href="PPE4.html">dossier complet</a>
+							</header>
+							<h1>
+								Contexte professionel
+							</h1>
+							<section>
+								<div class="row">
+									<div class="4u 12u$(mobile)">
+										To DO ecrire le contexte professionnel + mettre un lien vers la feuille de contexte
+									</div>
+
+								</div>
+							</section>
+						</article>
+
+					</div>
 
 				<!-- Footer -->
 					<div id="footer">
