--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
 									une page affichant les produits en promotions ;
 									une page panier.
 									(ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
-									<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-										<iframe src="images/doc(1).pdf" width="800" height="600" align="middle"></iframe>
-									</button>
+										<iframe src="images/doc(1).pdf" width="800" height="600" align="middle" >porte feuille</iframe>
+
 									<!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
 									</br>
 									</br>
