--- a/index.html
+++ b/index.html
@@ -74,8 +74,29 @@
 									une page affichant les produits en promotions ;
 									une page panier.
 									(ainsi qu’une possibilité d’inscription et de connexion)</h3></p>
-										<iframe src="images/doc(1).pdf" width="800" height="600" align="middle" >porte feuille</iframe>
+									<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+										contexte
+									</button>
 
+									<!-- Modal -->
+									<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+													<h4 class="modal-title" id="myModalLabel"></h4>
+												</div>
+												<div class="modal-body">
+
+													<iframe src="images/doc(1).pdf" width="400" height="600" align="middle"></iframe>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+													<button type="button" class="btn btn-primary">Save changes</button>
+												</div>
+											</div>
+										</div>
+									</div>
 									<!--<a href="PPE2.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > description complete</a>-->
 									</br>
 									</br>
