--- a/index.html
+++ b/index.html
@@ -88,7 +88,29 @@
 												</div>
 												<div class="modal-body">
 
-													<iframe src="images/doc(1).pdf" width="400" height="600" align="middle"></iframe>
+													<iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600" align="middle"></iframe>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
+									</div>
+									<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+										mcd
+									</button>
+
+									<!-- Modal -->
+									<div class="modal fade" id="myModalppe2mcd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+													<h4 class="modal-title" id="mcdppe2"></h4>
+												</div>
+												<div class="modal-body">
+
+													<iframe src="images/E4-PPE2%20Bettini.pdf" width="500" height="600" align="middle"></iframe>
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -124,7 +146,7 @@
 													<h4 class="modal-title" id="myModalLabel2"></h4>
 												</div>
 												<div class="modal-body">
-													<iframe src="images/doc(1).pdf" width="400" height="600" align="middle"></iframe>
+													<iframe src="images/E4-PPE4%20Bettini(1).pdf" width="500" height="600" align="middle"></iframe>
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -184,7 +206,7 @@
 														<h4 class="modal-title" id="myModalLabel3"></h4>
 													</div>
 													<div class="modal-body">
-														<iframe src="images/doc(1).pdf" width="400" height="600" align="middle"></iframe>
+														<iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>
 													</div>
 													<div class="modal-footer">
 														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
