--- a/index.html
+++ b/index.html
@@ -186,7 +186,27 @@
 											<h1>Back Office</h1>
 											<img src="images/backoffice.png"  height="400" width="800" />
 										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-											<a href="Portefeuille.html" style="align-self: center"  class="btn btn-default btn-lg" type="button" > Accés au porte feuille de competence </a>
+											<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+										porte feuille de competence
+									</button>
+
+											<!-- Modal -->
+									<div class="modal fade" id="myModalppe2mcd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+													<h4 class="modal-title" id="mcdppe2"></h4>
+												</div>
+												<div class="modal-body">
+
+iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
+									</div> Accés au porte feuille de competence </a>
 										</span>
 
 										<h1>Projet 2</h1>
