--- a/index.html
+++ b/index.html
@@ -191,22 +191,22 @@
 									</button>
 
 											<!-- Modal -->
-									<div class="modal fade" id="myModalppe2mcd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+									<div class="modal fade" id="portefeuille3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 										<div class="modal-dialog" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
 													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-													<h4 class="modal-title" id="mcdppe2"></h4>
+													<h4 class="modal-title" id="porte-feuille3"></h4>
 												</div>
 												<div class="modal-body">
 
-iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>												</div>
+<iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 												</div>
 											</div>
 										</div>
-									</div> Accés au porte feuille de competence </a>
+									</div>
 										</span>
 
 										<h1>Projet 2</h1>
@@ -214,23 +214,22 @@ iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>
 										<img src="images/PXEscreen.png"  height="400" width="800" />
 											<h2>Mise en place d'un systeme de deploiement automatique d'os et de paquet pour la configation des ordinateurs composant le parcs d'IVSTORE</h2>
 										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-											Porte-feuille de competence
+											porte feuille de competence
 										</button>
 
 										<!-- Modal -->
-										<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+										<div class="modal fade" id="porte-feuille1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header">
 														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-														<h4 class="modal-title" id="myModalLabel3"></h4>
+														<h4 class="modal-title" id="portefeuille1"></h4>
 													</div>
 													<div class="modal-body">
-														<iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>
-													</div>
+
+														<iframe src="images/doc(1).pdf" width="500" height="600" align="middle"></iframe>												</div>
 													<div class="modal-footer">
 														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-														<button type="button" class="btn btn-primary">Save changes</button>
 													</div>
 												</div>
 											</div>
