--- a/index.html
+++ b/index.html
@@ -222,7 +222,20 @@
         </article>
     </div>
 </div>
-
+<article id="veille" class="panel">
+    <header>
+        <h1>
+            Projets En Entreprise
+        </h1>
+    </header>
+    <section>
+        <div>
+            <div>
+                prout
+            </div>
+        </div>
+    </section>
+</article>
 
 <!-- Footer -->
 <div id="footer">
