--- a/index.html
+++ b/index.html
@@ -186,27 +186,27 @@
             <section>
                 <div>
                     <div>
-										<Span>
-											<h1>Presentation de L'entreprise IVS</h1>
-											<img src="images/FOND%20ECRAN%20IVS.jpeg" height="400" width="800"/>
-											<h2>
-												IVS, société spécialisée dans le développement de solutions intelligentes d'analyse d'image et d'extraction d'informations.<br/>
-												IVS est a l'origine de la creation du produit IVSTORE:</br>
-                                                IVStore est un capteur camera destiné au retail, il permet la visualisation et l'analyse du comportement client a l'interieur d'un magasin.<br/>
-                                                </br>
-                                                <a href="http://www.ivstore.fr" style="align-self: center"
-                                                   class="btn btn-default btn-lg" type="button">lien du site </a>
-											</h2>
-										</Span>
+                        <Span>
+                            <h1>Presentation de L'entreprise IVS</h1>
+                            <img src="images/FOND%20ECRAN%20IVS.jpeg" height="400" width="800"/>
+                            <h2>
+                                IVS, société spécialisée dans le développement de solutions intelligentes d'analyse d'image et d'extraction d'informations.<br/>
+                                IVS est a l'origine de la creation du produit IVSTORE:</br>
+                                IVStore est un capteur camera destiné au retail, il permet la visualisation et l'analyse du comportement client a l'interieur d'un magasin.<br/>
+                                </br>
+                                <a href="http://www.ivstore.fr" style="align-self: center"
+                                   class="btn btn-default btn-lg" type="button">lien du site </a>
+                            </h2>
+                        </Span>
                         <br/>
 
                         <h1>PROJET 1</h1>
                         <span>
-											<h1>Back Office</h1>
-											<img src="images/backoffice.png" height="400" width="800"/>
-										<h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
-											<iframe src="images/doc(1).pdf" width="500" height="600"
-                                                    align="middle"></iframe></div>
+                            <h1>Back Office</h1>
+                            <img src="images/backoffice.png" height="400" width="800"/>
+                            <h2>Creation d'un back Office complet afin de centralisé les differentes application interne et externe </h2>
+                            <iframe src="images/doc(1).pdf" width="500" height="600"
+                                    align="middle"></iframe></div>
 
                 </div>
                 </span>
@@ -222,8 +222,17 @@
         </article>
     </div>
 </div>
+<article id="veille" class="panel">
+    <header>
+        <h1>
+           veille
+        </h1>
+    </header>
+    <section>
 
-<!-- Footer -->
+    </section>
+</article>
+-- Footer -->
 <div id="footer">
     <ul class="copyright">
         <li>&copy; Untitled.</li>
