--- a/index.html
+++ b/index.html
@@ -220,14 +220,19 @@
 
             </section>
         </article>
+
+       <article id="veille" class="panel">
+           <header>
+               <h1>
+                   veille
+               </h1>
+           </header>
+        <section>
+
+        </section>
+        </article>
     </div>
 </div>
-
-<article id="veille" class="panel">
-    <section>
-
-    </section>
-</article>
 -- Footer -->
 <div id="footer">
     <ul class="copyright">
